--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                   <h1>not around.</h1>
             </div>
             <div class="text2">
-                  <h2>we will be back sometime.</h2>
+                  <h2>i will be back sometime.</h2>
             </div>
       </div>
   </body>
